# devenv-doctor

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: mvp.md  requirements.md  rules.md  use-cases.md
src/devenv_doctor/: cli.py  runner.py
src/devenv_doctor/checks/: compose.py  compose_utils.py  environment.py
src/devenv_doctor/core/: command.py
tests/: test_cli.py  test_environment_checks.py  test_runner.py
